# wallpaper.is

./: .gitignore  README.md  package-lock.json  package.json  scheme.drawio  tsconfig.json  vite.config.ts
src/: App.scss  App.tsx  types.d.ts  variables.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/mpv/: mpv.com
src-tauri/src/: db.rs  fs_utils.rs  lib.rs  main.rs  mpv_controller.rs  system_tray.rs  windows_utils.rs
src-tauri/src/commands/: add_folder.rs  get_items.rs  mod.rs  save_video.rs  set_wallpaper.rs
src/app/context/: ItemsContex.tsx  types.d.ts
src/app/hooks/: useItemAPI.tsx
src/app/router/: index.tsx
src/components/common/button/: button.module.scss  index.tsx
src/components/galery/AddWallpaper/: addWallpaper.module.scss  index.tsx
src/components/galery/menu/: index.tsx  menu.module.scss
src/components/galery/menu/itemList/: index.tsx  itemList.module.scss
src/components/layout/: index.tsx  layout.module.scss
src/pages/galery/: galery.module.scss  index.tsx
