[package]
name = "wallpaper-is"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.11", features = ["blocking"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-utils = { version = "2", features = ["resources"] }
tauri-plugin-shell = "2"                                  # Permite ejecutar procesos externos como mpv
tauri-plugin-process = "2"                                # Manejo de procesos en Tauri
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18"
tauri-plugin-dialog = "2.3.0"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]
